--- a/src/App.css
+++ b/src/App.css
@@ -1,77 +1,5 @@
-/* .App {
-  text-align: center;
-}
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.list-group-item{
   display: flex;
-  flex-direction: column;
+  justify-content: space-between;
   align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
 }
-
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
-} */
- /* p{
-  color: aquamarine;
-  background-color: black;
- }
- h1{
-  color:blueviolet;
-  width: 100pt;
-  height: 100pt;
-  background-color: antiquewhite;
-  font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
- } */
-
- .Wrapper{
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    /* flex-direction: column; */
-    gap: 10px;
- }
-
- .Wrapper button {
-          outline: none;
-          border: none;
-          padding: 20px 25px;
-          font-size: 22px;
-          border-radius: 4px;
-          color:beige;
-          cursor: pointer;
- }
- button:disabled{
-    opacity: 0.6;
- }
- .plus{
-    background-color: blue;
- }
-
- .minus{
-    background-color: rgb(90, 12, 25);
- }
